tests/tests/snapshots/test__semantic__semantic-apply-types-exports-runtime-shapes.snap
---
source: tests/tests/semantic.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type SemanticPayload = {
	site: URL,
	sites: URL[],
	optional_site: URL | null,
};

export type Website = URL;
