tests/tests/snapshots/test__semantic__semantic-composed-deserialize-transform.snap
---
source: tests/tests/semantic.rs
expression: "transformed_snapshot(&types,\nsemantic.apply_deserialize(&types, &dt, \"payload\"),)"
---
type: <unchanged>
runtime: ({...payload,site:new URL(payload.site),id:BigInt(payload.id),nested:payload.nested.map(i=>i==null?i:new URL(i))})
