tests/tests/snapshots/test__semantic__semantic-custom-deserialize-transform.snap
---
source: tests/tests/semantic.rs
expression: "transformed_snapshot(&types,\nsemantic.apply_deserialize(&types, &dt, \"payload\"),)"
---
type: <unchanged>
runtime: ({...payload,site:new URL(payload.site),sites:payload.sites.map(i=>new URL(i)),optional_site:payload.optional_site==null?payload.optional_site:new URL(payload.optional_site)})
