tests/tests/snapshots/test__semantic__semantic-custom-rules-compose-with-lossless-builtins.snap
---
source: tests/tests/semantic.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type CombinedPayload = {
	site: URL,
	id: bigint,
	nested: (URL | null)[],
};

export type Website = URL;
