tests/tests/snapshots/test__semantic__semantic-custom-serialize-transform.snap
---
source: tests/tests/semantic.rs
expression: "transformed_snapshot(&types,\nsemantic.apply_serialize(&types, &dt, \"payload\"),)"
---
type: <unchanged>
runtime: ({...payload,site:payload.site.toString(),sites:payload.sites.map(i=>i.toString()),optional_site:payload.optional_site==null?payload.optional_site:payload.optional_site.toString()})
