tests/tests/snapshots/test__semantic__semantic-lossless-numbers-deserialize-transform.snap
---
source: tests/tests/semantic.rs
expression: "transformed_snapshot(&types,\nsemantic.apply_deserialize(&types, &dt, \"payload\"),)"
---
type: <unchanged>
runtime: ({...payload,id:BigInt(payload.id),signed:BigInt(payload.signed)})
