tests/tests/snapshots/test__semantic__semantic-lossless-numbers-export.snap
---
source: tests/tests/semantic.rs
expression: rendered
---
// This file has been generated by Specta. Do not edit this file manually.
export type NumberPayload = {
	id: bigint,
	signed: bigint,
	scores: number[],
	maybe_score: number | null,
};
