tests/tests/snapshots/test__semantic__semantic-lossless-numbers-serialize-transform.snap
---
source: tests/tests/semantic.rs
expression: "transformed_snapshot(&types,\nsemantic.apply_serialize(&types, &dt, \"payload\"),)"
---
type: <unchanged>
runtime: ({...payload,scores:payload.scores.map(i=>i),maybe_score:payload.maybe_score==null?payload.maybe_score:payload.maybe_score})
